Made all Lists into ArrayLists for consistency with the JSon class and testing. This commit is not working, but progress has been made and tests will be corrected soon